--- a/vignettes/fuzzy_cmeans.Rmd
+++ b/vignettes/fuzzy_cmeans.Rmd
@@ -9,7 +9,7 @@ output:
 
 <!--
 %\VignetteEngine{knitr::rmarkdown}
-%\VignetteIndexEntry{VP Misc}
+%\VignetteIndexEntry{fuzzy cmeans}
 %\VignetteKeyword{vp.mics}
 %\VignettePackage{vp.misc}
 -->
