--- a/vignettes/heatmap.plus.2.Rmd
+++ b/vignettes/heatmap.plus.2.Rmd
@@ -6,7 +6,7 @@ output:
 
 <!--
 %\VignetteEngine{knitr::rmarkdown}
-%\VignetteIndexEntry{VP Misc}
+%\VignetteIndexEntry{heatmap.plus.2}
 %\VignetteKeyword{vp.mics}
 %\VignettePackage{vp.misc}
 -->
