--- a/vignettes/id_conversion.Rmd
+++ b/vignettes/id_conversion.Rmd
@@ -9,7 +9,7 @@ output:
 
 <!--
 %\VignetteEngine{knitr::rmarkdown}
-%\VignetteIndexEntry{VP Misc}
+%\VignetteIndexEntry{ID conversion}
 %\VignetteKeyword{vp.mics}
 %\VignettePackage{vp.misc}
 -->
