--- a/vignettes/ontology_overrepresentation.Rmd
+++ b/vignettes/ontology_overrepresentation.Rmd
@@ -9,7 +9,7 @@ output:
 
 <!--
 %\VignetteEngine{knitr::rmarkdown}
-%\VignetteIndexEntry{VP Misc}
+%\VignetteIndexEntry{ontology overrepresentation}
 %\VignetteKeyword{vp.mics}
 %\VignettePackage{vp.misc}
 -->
