--- a/vignettes/wgcna_example.Rmd
+++ b/vignettes/wgcna_example.Rmd
@@ -9,7 +9,7 @@ output:
 
 <!--
 %\VignetteEngine{knitr::rmarkdown}
-%\VignetteIndexEntry{VP Misc}
+%\VignetteIndexEntry{WGCNA example}
 %\VignetteKeyword{vp.mics}
 %\VignettePackage{vp.misc}
 -->
