--- a/vignettes/heatmap_examples.Rmd
+++ b/vignettes/heatmap_examples.Rmd
@@ -1,4 +1,5 @@
 ---
+title: "Heatmaps"
 output:
   html_document:
     highlight: tango
@@ -7,8 +8,8 @@ output:
 <!--
 %\VignetteEngine{knitr::rmarkdown}
 %\VignetteIndexEntry{heatmap_examples}
-%\VignetteKeyword{vp.mics}
-%\VignettePackage{vp.misc}
+%\VignetteKeyword{MSnSet.utils}
+%\VignettePackage{MSnSet.utils}
 -->
 
 <!--
@@ -21,8 +22,8 @@ opts_chunk$set(size='tiny')
 
 
 ```{r env, message=FALSE, echo=FALSE, cache=FALSE, warning=FALSE}
-library("vp.misc")
-suppressPackageStartupMessages(library("MSnbase"))
+library("MSnSet.utils")
+library("MSnbase")
 ```
 
 ```{r core, fig.align='center', fig.height=8, fig.width=8}
@@ -59,7 +60,9 @@ pwr = 2
 lim = 4
 breaks = lim * abs(seq(-1,+1,length=100))^pwr * sign(seq(-1,+1,length=100))
 msnset <- msnset[,order(msnset$subject.type)]
-ColSideColors <- c("yellow","magenta","green")[as.numeric(factor(msnset$subject.type, levels=c("case","control.1","control.2")))]
+ColSideColors <- c("yellow","magenta","green")[as.numeric(
+  factor(msnset$subject.type, levels=c("case","control.1","control.2"))
+  )]
 
 library(gplots)
 heatmap.2(exprs(msnset),
